[package]
name = "delta_2a_lidar"
version = "0.1.0"
authors = ["Jeroen Vervaeke <jeroenvervaeke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
derive_more = "0.99.14"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serialport = "4.0.1"