[package]
name = "delta_2a_lidar"
description = "A driver implementation for the 3irobotix delta-2A lidar sensor"
version = "0.1.0"
authors = ["Jeroen Vervaeke <jeroenvervaeke@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jeroenvervaeke/delta_2a_lidar"
repository = "https://github.com/jeroenvervaeke/delta_2a_lidar"
readme = "README.md"
keywords = ["lidar", "3irbotix", "delta-2a", "delta2a", "sensor", "driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
derive_more = "0.99.14"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serialport = "4.0.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
file = ["serialize"]
serialize = [ "serde", "serde_json"]

[[bin]]
name = "record"
path = "bin/record.rs"
required-features = ["file"]

[[bin]]
name = "read_measurements"
path = "bin/read_measurements.rs"
required-features = ["file"]